Add. created nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Vertical Farming</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+        <li><img src="assests/img/Logo.png"></li>
+        <li><h2>Vertical Form</h2></li>
+        </ul>
+        <ul>
+            <li>Solutions</li>
+            <li>Department</li>
+            <li>Farming Method</li>
+            <li>Company</li>
+            <li>About</li>
+        </ul>
+        <ul><button class="btn-StartFreeTrail">Start Free Trail</button>
+        <button class="btn-Account">Account</button>
+        </ul>
+    </nav>
 </body>
 </html>
