Add. added section and footer column

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assests/css/style.css">
-    <title>Vertical Farming</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Golos+Text&family=Montserrat&family=Petit+Formal+Script&display=swap" rel="stylesheet">
+    <title>Vertical Farming</title> 
 </head>
 <body>
     <nav>
         <ul>
-        <li><img src="assests/img/Logo.png"></li>
-        <li><h2>Vertical Form</h2></li>
+        <li><img class="logo" src="assests/img/Logo.png"></li>
+        <li><h2 class="LogoTitle">Vertical Form</h2></li>
         </ul>
         <ul>
             <li>Solutions</li>
@@ -24,5 +29,33 @@
         <button class="btn-Account">Account</button>
         </ul>
     </nav>
+    <section>
+    <p class="section-heading-para">
+    Fresh, Sustainable,Plant
+    <span class="VerticalGrown">Grown Vertically</span>
+    in<span> Urban Areas</span>
+    </p>
+    <p class="section-para">
+                Our vertical farming startup brings sustainable, locally grown produce to
+                urban areas. With our innovative technology, we're revolutionizing the way
+                we grown and consume fresh food.
+    </p>
+    <button>Start Now</button>
+    <button>HOW IT WORKS?</button>
+    
+    </section>
+    <footer>
+        <p class="footer-paragraph">We offer Consulting Services For Vertical Farming Method </p>
+        
+        <ul>
+            <button>Don't wait</button>
+            <button>Join us</button>
+            <button>Act now</button>
+        </ul>
+        <ul>
+            <button>Contact Team</button>
+        </ul>
+
+    </footer>
 </body>
 </html>
