--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Golos+Text&family=Montserrat&family=Petit+Formal+Script&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/26d4a64054.js" crossorigin="anonymous"></script>
     <title>Vertical Farming</title> 
 </head>
 <body>
     <nav>
         <ul>
         <li><img class="logo" src="assests/img/Logo.png"></li>
-        <li><h2 class="LogoTitle">Vertical Form</h2></li>
+        <li><h2 class="LogoTitle">Vertical Farm</h2></li>
         </ul>
         <ul>
             <li>Solutions</li>
@@ -29,33 +30,32 @@
         <button class="btn-Account">Account</button>
         </ul>
     </nav>
+
     <section>
-    <p class="section-heading-para">
-    Fresh, Sustainable,Plant
-    <span class="VerticalGrown">Grown Vertically</span>
-    in<span> Urban Areas</span>
-    </p>
-    <p class="section-para">
-                Our vertical farming startup brings sustainable, locally grown produce to
-                urban areas. With our innovative technology, we're revolutionizing the way
-                we grown and consume fresh food.
-    </p>
-    <button>Start Now</button>
-    <button>HOW IT WORKS?</button>
-    
+        <p class="section-heading-para">
+            Fresh<span class="comma-clr">,</span> Sustainable<span class="comma-clr">,</span> Plant
+            <span class="GrownVertically">Grown Vertically</span>
+            in <span class="UrbanAreas">Urban Areas</span>
+        </p>
+        <p class="section-para">
+            Our vertical farming startup brings sustainable, locally grown produce to
+            urban areas. With our innovative technology, we're revolutionizing the way
+            we grown and consume fresh food.
+        </p>
+        <button class="btn-StartNow">Start Now</button>
+        <button class="btn-HowItWorks">HOW IT WORKS?</button>
     </section>
+
     <footer>
         <p class="footer-paragraph">We offer Consulting Services For Vertical Farming Method </p>
-        
         <ul>
-            <button>Don't wait</button>
-            <button>Join us</button>
-            <button>Act now</button>
+            <button class="DontWait">Don't wait</button>
+            <button class="JoinUs">Join us</button>
+            <button class="ActNow">Act now</button>
         </ul>
         <ul>
             <button>Contact Team</button>
         </ul>
-
     </footer>
 </body>
 </html>
