Add. added new process column

--- a/index.html
+++ b/index.html
@@ -46,12 +46,20 @@
         <img class="PlantOne" src="assests/img/plant1.png">
         <img class="PlantTwo" src="assests/img/plant2.png">
         <img class="PlantThree"src="assests/img/plant3.png">
+        <br><br>
+        <br><br>
+        <button class="PrsBoxOne">
+            <span class="NumOne">1</span>
+            <span class="PrsBoxOneHeading">Choose the right crops</span><br>
+            <span class="PrsBoxOnePara">Select the best crops for your vertical forming</span>
+        </button>
+
     </section>
 
     <footer>
         <button class="FarmStartAt">Farm Start At  <span class="SevenAM">7 AM</span></button>
         <img class="FooterLeaf" src="assests/img/footerleaf.png" alt="">
-        <p class="footer-paragraph">We offer Consulting Services For Vertical Farming Method </p>
+        <span class="footer-paragraph">We offer Consulting Services For Vertical Farming Method </span>
         <ul>
             <button class="DontWait">Don't wait</button>
             <button class="JoinUs">Join us</button>
