Updated the Nav Bar.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <p class="section-para">
             Our vertical farming startup brings sustainable, locally grown produce to
-            urban areas. With our innovative technology, we're revolutionizing the way
+            urban areas. With our innovative technology, we are revolutionizing the way
             we grown and consume fresh food.
         </p>
         
