--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li>Solutions</li>
             <li>Department</li>
-            <li>Farming </li>
+            <li>Farming Method</li>
             <li>Company</li>
             <li>About</li>
         </ul>
